plugins {
    id 'java-library'
    id 'jacoco'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.code.gson:gson:2.8.8'
    implementation 'org.json:json:20210307'
    implementation 'com.sparkjava:spark-core:2.9.3'
    implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.+'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter:5.8.0'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.13.0'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.13.0'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.0'
}

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

version = '1.2.1'

apply plugin: 'application'
apply plugin: 'eclipse'

sourceSets {
    main {
        java {
            srcDir 'src/main/java'
        }
        resources {
            srcDir 'src/main/resources'
        }
    }
    test {
        java {
            srcDir 'src/test/java'
        }
        resources {
            srcDir 'src/test/resources'
        }
    }
}

mainClassName = 'App'

allprojects {
  apply plugin: 'java'

  tasks.withType(Copy).all {
    duplicatesStrategy 'exclude'
  }
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
    ignoreFailures = true
}

jacocoTestReport {
    reports {
        xml.enabled true
        html.enabled true
    }

    dependsOn test
}
